--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"babel-loader": "7.1.2",
 		"babel-preset-react-app": "^3.1.1",
 		"babel-runtime": "6.26.0",
-		"bootstrap": "^4.0.0-alpha.6",
+		"bootstrap": "^4.1.0",
 		"case-sensitive-paths-webpack-plugin": "2.1.1",
 		"chalk": "1.1.3",
 		"css-loader": "0.28.7",
@@ -40,7 +40,7 @@
 		"react-dom": "^16.3.2",
 		"react-redux": "^5.0.7",
 		"react-router-dom": "^4.2.2",
-		"reactstrap": "^5.0.0-alpha.4",
+		"reactstrap": "^5.0.0-beta.3",
 		"redux": "^4.0.0",
 		"redux-thunk": "^2.2.0",
 		"resolve": "1.6.0",
