--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "jobsearch-client",
+	"homepage": "https://smithwebtek.github.io/jobsearch-client",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -55,7 +56,8 @@
 	"scripts": {
 		"start": "node scripts/start.js",
 		"build": "node scripts/build.js",
-		"test": "node scripts/test.js --env=jsdom"
+		"test": "node scripts/test.js --env=jsdom",
+		"deploy": "npm run build&&gh-pages -d build"
 	},
 	"jest": {
 		"collectCoverageFrom": [
@@ -98,5 +100,8 @@
 	},
 	"eslintConfig": {
 		"extends": "react-app"
+	},
+	"devDependencies": {
+		"gh-pages": "^1.1.0"
 	}
 }
