--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_DEV_API_URL="https://swt-jobsearch-api.herokuapp.com"
+REACT_APP_DEV_API_URL="https://swt-jobsearch-api.herokuapp.com/api"
